Opened 7 years ago

Closed 7 years ago

Last modified 7 years ago

#8300 closed defect (fixed)

libdav1d decoder doesn't initialize reordered_opaque

Reported by: Lastique Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: dav1d
Cc: andysem@mail.ru Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

libdav1d decoder does not initialize AVFrame::reordered_opaque member of the decoded frame, leaving it zero (i.e. leaving the value that was there when avcodec_receive_frame was called). Normally, as documented for AVCodecContext::reordered_opaque, that member should be initialized with the value from AVCodecContext::reordered_opaque after reordering. Since, AFAIK, AV1 doesn't reorder frames, libdav1d_receive_frame should simply copy AVCodecContext::reordered_opaque to AVFrame::reordered_opaque.

This was found when using ffmpeg (libavcodec) through its C API. I don't think it can be demonstrated via ffmpeg command line.

ffmpeg 4.2.1

Change History (3)

comment:1 by Lastique, 7 years ago

Cc: andysem@mail.ru added

comment:2 by James, 7 years ago

Resolution: fixed
Status: newclosed
Version: 4.2git-master

comment:3 by Carl Eugen Hoyos, 7 years ago

Keywords: dav1d added
Note: See TracTickets for help on using tickets.