avcodec/libdav1d: set AVFrame reordered_opaque

Fixes ticket #8300

Signed-off-by: James Almer <jamrial@gmail.com>